--- a/PracticalAssignment/PracticalAssignment.fsproj
+++ b/PracticalAssignment/PracticalAssignment.fsproj
@@ -15,4 +15,8 @@
     <None Include="TypesAST.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FsLexYacc" Version="10.0.0" />
+  </ItemGroup>
+
 </Project>
